apps/transmission/install/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: transmission
  labels:
    app: transmission
    app.kubernetes.io/name: transmission
    app.kubernetes.io/part-of: transmission
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/component: transmission
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "LinuxServer.io images do not require a read-only root filesystem"
    ignore-check.kube-linter.io/run-as-non-root: "LinuxServer.io images do not require a non-root user"
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
        app.kubernetes.io/part-of: transmission
        app.kubernetes.io/instance: transmission
        app.kubernetes.io/component: transmission
        app: transmission
    spec:
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:4.0.6-r4-ls302
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false  # prevent sudo, etc.
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          ports:
            - containerPort: 9091
              name: rpc
              protocol: TCP
            - containerPort: 51413
              name: peer-port
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  curl -u "$USER:$PASS" -s -o /dev/null -w "%{http_code}" http://localhost:9091/transmission/rpc | grep -q 401 || exit 0
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  curl -u "$USER:$PASS" -s -o /dev/null -w "%{http_code}" http://localhost:9091/transmission/rpc | grep -q 401 || exit 0
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /config
            - name: transmission-data
              mountPath: /downloads
              subPath: downloads  # mounts /private/downloads from NFS
            - name: transmission-data
              mountPath: /watch
              subPath: transmission_watch_dir/k3s  # mounts /private/transmission_watch_dir/k3s from NFS
            - name: notification-script
              mountPath: /scripts/transmission_notification.sh
              subPath: transmission_notification.sh
      restartPolicy: Always
      volumes:
        - name: transmission-secret
          secret:
            secretName: transmission-secret
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: transmission-data
          persistentVolumeClaim:
            claimName: transmission-data
        - name: notification-script
          configMap:
            name: transmission-notification-script
            items:
              - key: transmission_notification.sh
                path: transmission_notification.sh
            defaultMode: 0755
      securityContext:
        fsGroup: 119
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - transmission
              topologyKey: kubernetes.io/hostname
