apps/transmission/install/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-peer-tcp
  namespace: transmission
  labels:
    app: transmission
    app.kubernetes.io/name: transmission
    app.kubernetes.io/part-of: transmission
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/component: transmission
  annotations:
    metallb.io/allow-shared-ip: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.50.32
  externalTrafficPolicy: Local
  selector:
    app: transmission
  ports:
    - name: peer-tcp
      protocol: TCP
      port: 51413
      targetPort: 51413
    - name: rpc
      protocol: TCP
      port: 9091
      targetPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-peer-udp
  namespace: transmission
  labels:
    app: transmission
    app.kubernetes.io/name: transmission
    app.kubernetes.io/part-of: transmission
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/component: transmission
  annotations:
    metallb.io/allow-shared-ip: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.50.32
  externalTrafficPolicy: Local
  selector:
    app: transmission
  ports:
    - name: peer-udp
      protocol: UDP
      port: 51413
      targetPort: 51413
