apps/transmission/install/ingressrouteTCP.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: transmission-rpc
  namespace: transmission
spec:
  entryPoints:
    - rpc
  routes:
    - match: Host(`transmission.local.asztalos.net`)
      services:
        - name: transmission-rpc
          port: 9091
